Bug 336957 Crash when calling messageServiceFromURI("file://...").streamMessage [@ nsMailboxService::FetchMessage] r=bienvenu sr=bienvenu